GithubUsers/app/src/main/java/com/example/githubusers/core/domain/errors/ServerError.kt
package com.example.githubusers.core.domain.errors

class ServerError : Error()
